--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -79,6 +79,19 @@ h1, h2, h3, h4 {
   height: 65px;
 }
 
+.iconsec2 {
+  background-image: url(../common/img/compensaciones.png);
+  -webkit-background-size: contain;
+  background-size: contain;
+  float: right;
+  width: 65px;
+  height: 65px;
+}
+
+.mt2 {
+  margin-top: 35px;
+}
+
 .selector p {
     line-height: 1.5;
     font-size: 15px;
@@ -137,9 +150,13 @@ h1, h2, h3, h4 {
   color: #4a585f;
 }
 
-#geocercas {
+#geocercas,
+#proyectos {
     display: block !important;
+    padding-top: 0;
 }
+
+
 
 div[class*="MuiPaper-root-"] {
     margin: 0 !important;
@@ -180,6 +197,7 @@ div[class*="MuiPaper-root-"]:nth-child(1) {
 }
 
 #panel1-Geocerca > div:nth-child(1),
+#panel1-Centro > div:nth-child(1),
 #panel2 > div:nth-child(1),
 #panel3 > div:nth-child(1) {
   font-size: 15px;
@@ -189,6 +207,7 @@ div[class*="MuiPaper-root-"]:nth-child(1) {
 }
 
 #panel1-Geocerca > div:nth-child(1) svg,
+#panel1-Centro > div:nth-child(1) svg,
 #panel2 > div:nth-child(1) svg,
 #panel3 > div:nth-child(1) svg {
   color: #e84a5f;
@@ -196,10 +215,6 @@ div[class*="MuiPaper-root-"]:nth-child(1) {
 
 .disabled {
   background-color: #000;
-}
-
-#geocercas {
-  padding-top: 0;
 }
 
 div[class*="MuiExpansionPanelSummary-expanded-"] {
@@ -261,6 +276,11 @@ div[id*="panel"] button:hover {
   text-align: left;
 }
 
+.tabs2 {
+  width: 50%;
+  max-width: auto;
+}
+
 button[class*="MuiTab-selected-"] {
   color: #e84a5f !important;
 }
@@ -282,6 +302,10 @@ div[class*="MuiTypography-body1"],
   overflow: hidden;
 }
 
+button[class*="MuiTab-root"] {
+  max-width: 500px !important;
+}
+
 .graphcard {
   margin: 10px 0;
   border-radius: 5px;
@@ -299,6 +323,13 @@ div[class*="MuiTypography-body1"],
   color: #fff;
   font-weight: 400;
   background-color: #2a363b;
+}
+
+.graphcard p {
+  padding: 10px;
+  text-align: right;
+  font-size: 14px;
+  color: #424242;
 }
 
 .leaflet-popup-tip {
