--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -376,16 +376,19 @@ p.legcomp {
 }
 
 .total {
-  padding: 10px 20px;
+  padding: 10px 15px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  display: inline-block;
   background-color: #fff;
   border-radius: 5px;
+  margin-right: 5px;
+  min-width: 120px;
+  display: inline-block;
+  margin-bottom: 5px;
 }
 
 .total h3 {
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 18px;
   color: #ea495f;
   font-weight: 400;
   padding-bottom: 5px;
@@ -395,4 +398,19 @@ p.legcomp {
 .total h4 {
   font-size: 30px;
   text-align: left;
+}
+
+.carrito h3, .carrito h4{
+  text-align: right;
+}
+
+.Biomatit {
+  color: #424242;
+  padding: 5px;
+  border-bottom: 1px solid #ea495f;
+}
+
+.complist svg {
+  color: #ea495f;
+  float: left;
 }
