--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -415,3 +415,15 @@ p.legcomp {
   color: #ea495f;
   float: left;
 }
+
+.Select-menu-outer { top: auto; bottom: 100%; }
+
+.Select-option.is-focused  {
+    background-color: rgba(234, 73, 95, 0.15) !important;
+}
+
+.icondown {
+  float: left;
+  cursor: pointer;
+  margin-top: -3px;
+}
