--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -427,3 +427,36 @@ p.legcomp {
   cursor: pointer;
   margin-top: -3px;
 }
+
+table.graphcard {
+  width: 100%;
+  font-size: 12px;
+  padding: 7px;
+}
+
+.graphcard th {
+  color: #ea495f;
+  border-bottom: 1px solid #ea495f;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding: 5px 3px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.graphcard td {
+  color: #345b6b;
+  padding: 1px 3px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+tr.row2table:nth-child(odd){
+  background-color: rgba(234, 73, 95, 0.15);
+}
+
+.graphcard tr.row3table td {
+  background-color: #345b6b;
+  font-weight: 600;
+  color: #fff !important;
+}
