--- a/src/common/main.css
+++ b/src/common/main.css
@@ -64,7 +64,7 @@ a {
 	background-image: linear-gradient(to top, #d5d4d0 0%, #d5d4d0 1%, #eeeeec 31%, #efeeec 75%, #e9e9e7 100%);
 }
 
-header {
+header.cabezote {
 	height: 60px;
 	width: 100%;
 	border-bottom: 1px solid #c3c3c3;
