--- a/src/searcher/searcher.css
+++ b/src/searcher/searcher.css
@@ -448,34 +448,72 @@ tr.row2table:nth-child(odd){
 }
 
 .addbioma {
-  background: transparent;
-  color: #ea495f;
   outline: none;
+  background: transparent;
   cursor: pointer;
-  border: 2px solid #ea495f;
-  font-weight: 600;
-  height: 30px;
-  width: 30px;
   border-radius: 50%;
-  line-height: 30px;
-  text-align: center;
-  font-size: 32px;
-  margin-top: 5px;
-  vertical-align: top;
+  width: 30px;
+  height: 30px;
+  position: relative;
+  border: 2px solid #ea495f;
+  margin-top: 10px;
+}
+
+.addbioma::after {
+  content: " ";
+  position: absolute;
+  display: block;
+  background-color: #ea495f;
+  height: 4px;
+  margin-top: -2px;
+  top: 50%;
+  left: 5px;
+  right: 5px;
+  z-index: 9;
+}
+
+.addbioma::before {
+  content: " ";
+  position: absolute;
+  display: block;
+  background-color: #ea495f;
+  width: 4px;
+  margin-left: -2px;
+  left: 50%;
+  top: 5px;
+  bottom: 5px;
+  z-index: 9;
 }
 
 .addbioma:hover {
   background-color: #ea495f;
-  color: #fff;
+}
+
+.addbioma:hover::after,
+.addbioma:hover::before {
+  background-color: #fff;
 }
 
 .smbtn {
-  height: 20px;
   width: 20px;
-  line-height: 20px;
-  font-size: 22px;
+  height: 20px;
   margin-left: 10px;
-  margin-top: 0;
+  margin-top: 1px;
+}
+
+.smbtn::after {
+  height: 2px;
+  margin-top: -1px;
+  left: 3px;
+  right: 3px;
+}
+
+.smbtn::before {
+  width: 2px;
+  margin-left: -1px;
+  top: 3px;
+  bottom: 3px;
+
 }
 
 .graphcard td input {
