--- a/src/common/main.css
+++ b/src/common/main.css
@@ -121,10 +121,10 @@ nav a:hover {
   width: 33px;
   height: 4px;
   margin-bottom: 5px;
-  position: relative; 
+  position: relative;
   background: #335b6b;
   border-radius: 3px;
-  z-index: 1;  
+  z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -785,50 +785,41 @@ button.rel8{
 
 footer {
 	width: 100%;
-	min-height: 100px;
-	padding: 30px 0 0;
+	min-height: 20px;
 	background-color: #22231c;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
 	z-index: 20;
-}
-
-.footersm {
-	width: 100%;
-	min-height: 50px;
-	background-color: #22231c;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
-	display: flex;
-	justify-content: space-between;
-	z-index: 2;
-}
-
-footer a {
-	padding: 0 20px;
+	padding: 12px 20px 8px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 footer h4 {
 	text-align: right;
-	padding: 0 25px 15px;
+	padding-bottom: 15px;
 	display: block;
 	color: #6c6c6c;
 	font-weight: 600;
-	line-height: 0;
+	line-height: 1;
 	font-size: 13px;
+}
+.footerflex {
+	padding: 10px 0;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
 }
 
 .footersm {
-	padding: 10px 25px 0;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	justify-content: space-between;
 }
 
 .footersm a {
@@ -839,14 +830,10 @@ footer h4 {
 	font-size: 15px;
 }
 
-footer h3 {
-	text-align: right;
-	margin: 15px 5px 0 0;
-}
-
 .footersm h3 {
-	line-height: 32px;
-	vertical-align: middle;
+	text-align: right;
+	line-height: 18px;
+	vertical-align: top;
 }
 
 footer h3 a, .footersm h3 a {
