Restricting negative values in the hectares sum, fixing link in README.md, setting up the strategies list in SelectedBiome, replacing CAR for EA, creating showBiomes to implement biomes selected list, fixing validation and interactions

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1472,6 +1472,27 @@ p.legcomp {
   margin-top: -3px;
 }
 
+.icongraph {
+	color: #ffffff;
+	float: right;
+	cursor: pointer;
+	border: 0;
+	background-color: transparent;
+}
+
+.icondelete {
+	color: #ffffff;
+	float: right;
+	cursor: pointer;
+	border: 0;
+	background-color: transparent;
+}
+
+.icondelete:disabled {
+	color: #757474;
+	outline: 0;
+}
+
 table.graphcard {
   width: 100%;
   font-size: 12px;
