--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1241,7 +1241,7 @@ a#reset-filters {
   margin-top: 15px !important;
 }
 
-#panel1-ZonaCentro > div:nth-child(1),
+.selector-expanded > div:nth-child(1),
 #panel1-Geocerca > div:nth-child(1),
 #panel2 > div:nth-child(1),
 #panel3 > div:nth-child(1) {
@@ -1252,7 +1252,7 @@ a#reset-filters {
 }
 
 #panel1-Geocerca > div:nth-child(1) svg,
-#panel1-ZonaCentro > div:nth-child(1) svg,
+.selector-expanded > div:nth-child(1) svg,
 #panel2 > div:nth-child(1) svg,
 #panel3 > div:nth-child(1) svg {
   color: #e84a5f;
